pic visibility II

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     </section>
     <section class="image-button-grid">
         <a href="travel.html" class="image-button">
-            <img src="./images/travel.jpg" alt="Travel">
+            <img src="t1-website-ux/images/travel.jpg" alt="Travel">
             <div class="button-label">Travel</div>
         </a>
         <a href="lodging.html" class="image-button">
-            <img src="./images/lodging.jpg" alt="Stay">
+            <img src="t1-website-ux/images/lodging.jpg" alt="Stay">
             <div class="button-label">Stay</div>
         </a>
         <a href="food.html" class="image-button">
-            <img src="./images/food.jpg" alt="Food">
+            <img src="t1-website-ux/images/food.jpg" alt="Food">
             <div class="button-label">Eat</div>
         </a>
         <a href="explore.html" class="image-button">
-            <img src="./images/explore.jpg" alt="Explore">
+            <img src="t1-website-ux/images/explore.jpg" alt="Explore">
             <div class="button-label">Explore</div>
         </a>
     </section>
