cleanup and adjustments

--- a/explore.html
+++ b/explore.html
@@ -28,10 +28,10 @@
 <section class="card-section">
 
     <div class="info-card">
-        <h3>🎉 Activities</h3>
+        <h3>Activities</h3>
         <p>
             Whether you're looking for adventure, relaxation, or nightlife, Taniti has something for everyone. From
-            outdoor thrills to cultural experiences, the island is packed with exciting ways to spend your days — and
+            outdoor thrills to cultural experiences, the island is packed with exciting ways to spend your days and
             nights.
         </p>
         <ul class="card-list">
@@ -48,7 +48,7 @@
     </div>
 
     <div class="info-card">
-        <h3>🗺️ Sightseeing</h3>
+        <h3>Sightseeing</h3>
         <p>
             Taniti is a photographer’s dream and an explorer’s playground. From lush rainforests to ancient
             architecture, the island’s natural and cultural highlights offer unforgettable views and experiences.
