--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -24,12 +24,80 @@
 </header>
 
 <div class="img-banner">
-    <h1 class="banner-title">Travel Taniti!</h1>
+    <h1 class="banner-title">Frequently Asked Questions</h1>
 </div>
+<section class="card-section">
+    <div class="info-card">
+        <h3>Frequently Asked Questions</h3>
+        <div class="faq-item">
+            <button class="faq-question">How big is Taniti, and how many people live there?</button>
+            <div class="faq-answer">
+                <p>Taniti is a small Pacific island with a land area of less than 500 square miles. It has a population
+                    of approximately 20,000 residents. The island features a mix of beaches, rainforests, and a small
+                    active volcano, making it both scenic and diverse.</p>
+            </div>
+        </div>
 
+        <div class="faq-item">
+            <button class="faq-question">What type of power outlets are used in Taniti?</button>
+            <div class="faq-answer">
+                <p>Taniti uses 120-volt outlets, the same as in the United States. No adapter is needed for U.S.
+                    travelers.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">What are the alcohol laws on Taniti?</button>
+            <div class="faq-answer">
+                <p>Alcohol cannot be sold or served between midnight and 9:00 a.m. The legal drinking age is 18, though
+                    it is not strictly enforced.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">Is English spoken on the island?</button>
+            <div class="faq-answer">
+                <p>Many younger Tanitians speak fluent English, especially in tourist areas. English is less common in
+                    rural regions, particularly among older residents.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">What medical services are available?</button>
+            <div class="faq-answer">
+                <p>Taniti has one hospital and several clinics. The hospital is well-equipped and staffed with
+                    multilingual employees.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">Is Taniti safe for tourists?</button>
+            <div class="faq-answer">
+                <p>Violent crime is very rare. However, with increased tourism, incidents of pickpocketing and petty
+                    theft have risen slightly. Stay aware in crowded areas.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">Are there holiday closures?</button>
+            <div class="faq-answer">
+                <p>Taniti observes many national holidays. On those days, tourist attractions, restaurants, and some
+                    businesses may be closed, so plan accordingly.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question">What currency is used?</button>
+            <div class="faq-answer">
+                <p>Taniti uses the U.S. dollar. Many businesses also accept euros and yen. Credit cards are widely
+                    accepted, and banks offer currency exchange services.</p>
+            </div>
+        </div>
+    </div>
+</section>
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div></a>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
@@ -47,5 +115,6 @@
         </a>
     </div>
 </footer>
+<script src="faq.js"></script>
 </body>
 </html>
