--- a/food.html
+++ b/food.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -22,14 +22,47 @@
         <a href="faq.html">FAQ</a>
     </nav>
 </header>
-
 <div class="img-banner">
-    <h1 class="banner-title">Travel Taniti!</h1>
+    <h1 class="banner-title">Dine Taniti!</h1>
 </div>
-
+<section class="card-section">
+    <div class="info-card">
+        <h3>Food and more!</h3>
+        <p>
+            Whether you're craving fresh island flavors, familiar comfort food, or quick groceries for your stay, Taniti
+            has options to satisfy every appetite. From seafood by the bay to late night convenience stores, eating well
+            is easy on the island.
+        </p>
+        <ul class="card-list">
+            <li><strong>Restaurants:</strong>
+                <ul>
+                    <li>The Driftwood Grill – local fish and rice</li>
+                    <li>Bay Breeze Café – casual island fusion</li>
+                    <li>Seaside Catch – waterfront seafood dining</li>
+                    <li>Ocean Ember – rustic local flavors</li>
+                    <li>Rainforest Table – farm-to-table island cuisine</li>
+                    <li>Island Diner – American-style comfort food</li>
+                    <li>The Taniti Griddle – pancakes, burgers, fries</li>
+                    <li>North Shore Eats – fast-casual American</li>
+                    <li>Lotus Grove – Pan-Asian noodles and rice bowls</li>
+                    <li>Sakura Sands – sushi and tropical stir-fry</li>
+                </ul>
+            </li>
+            <li><strong>Grocery Stores:</strong>
+                <ul>
+                    <li>Taniti Market – full-service supermarket</li>
+                    <li>Harbor Fresh Foods – supermarket near the bay</li>
+                    <li>Koko's Corner Store – smaller neighborhood grocer</li>
+                    <li>Jungle Basket – local produce and dry goods</li>
+                    <li>SunUp Stop – 24-hour convenience store</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</section>
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div></a>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
