--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -22,23 +22,21 @@
         <a href="faq.html">FAQ</a>
     </nav>
 </header>
-
 <div class="img-banner">
     <h1 class="banner-title">Welcome to Taniti!</h1>
 </div>
-
 <main class="main-content">
     <section class="about-section">
         <h2>Paradise on the Sea</h2>
         <p>
-            Welcome to <strong>Taniti</strong>, a hidden gem in the Pacific that blends natural beauty, rich culture,
-            and unforgettable adventure. Though small, Taniti offers an incredible variety of experiences — from
+            Welcome to <strong>Taniti</strong>, a hidden gem in the Pacific that blends beauty, culture, and adventure.
+            Though small, Taniti offers an incredible variety of experiences. From
             relaxing on soft, white-sand beaches to exploring lush rainforests and even hiking up an active volcano.
-            Whether you’re snorkeling in crystal-clear waters, zip-lining through the jungle canopy, enjoying fresh
+            Whether you’re snorkeling in crystal clear waters, zip lining through the jungle canopy, enjoying fresh
             seafood by the bay, or dancing the night away in a tropical club, Taniti has something for every traveler.
-            Stay in everything from cozy family-run B&Bs to luxury resorts, and explore charming Taniti City or the
+            Stay in everything from cozy B&Bs to luxury resorts and even hostels. Explore charming Taniti City or the
             vibrant, growing hub of Merriton Landing. With convenient transportation, friendly locals, and a warm island
-            atmosphere, Taniti is more than a destination — it’s an experience waiting to be discovered.
+            atmosphere, Taniti is more than a destination, it’s an experience waiting to be discovered.
         </p>
     </section>
     <section class="image-button-grid">
@@ -59,11 +57,10 @@
             <div class="button-label">Explore</div>
         </a>
     </section>
-
 </main>
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div></a>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
