--- a/travel.html
+++ b/travel.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -22,13 +22,12 @@
         <a href="faq.html">FAQ</a>
     </nav>
 </header>
-
 <div class="img-banner">
     <h1 class="banner-title">Travel Taniti!</h1>
 </div>
 <section class="card-section">
     <div class="info-card">
-        <h3>✈️ Traveling to Taniti</h3>
+        <h3>Traveling to Taniti</h3>
         <p>
             Most visitors arrive by air at Taniti’s small airport, which currently handles propeller planes and small
             jets. An expansion is underway to accommodate larger commercial flights in the near future. Some travelers
@@ -36,19 +35,30 @@
             arrive, the island welcomes you with scenic views and warm tropical breezes.
         </p>
     </div>
+    <div class="travel-buttons-container">
+        <div class="travel-button flight-button">
+            <img src="images/plane.jpg" alt="Plane to Taniti">
+            <div class="travel-overlay">Book a Flight</div>
+        </div>
+        <div class="travel-button cruise-button">
+            <img src="images/cruiseship.jpg" alt="Cruise to Taniti">
+            <div class="travel-overlay">Find a Cruise</div>
+        </div>
+    </div>
+
     <div class="info-card">
-        <h3>🚲 Getting Around Taniti</h3>
+        <h3>Getting Around Taniti</h3>
         <p>
             Exploring Taniti is easy and convenient. Public buses operate in Taniti City daily from 5:00 a.m. to 11:00
-            p.m., while private buses cover more rural areas. Taxis and rental cars are also available, and many
-            visitors enjoy renting bikes — helmets included — to explore at a relaxed pace. Taniti City is flat and
+            p.m., while private buses cover more rural areas. Taxis and rental cars are also available. Many
+            visitors even enjoy renting bikes to explore at a relaxed pace. Taniti City is flat and
             walkable, especially around the lively Merriton Landing area.
         </p>
     </div>
 </section>
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div></a>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
