--- a/lodging.html
+++ b/lodging.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -26,10 +26,25 @@
 <div class="img-banner">
     <h1 class="banner-title">Travel Taniti!</h1>
 </div>
-
+<section class="card-section">
+    <div class="info-card">
+        <h3>Lodging</h3>
+        <p>
+            Taniti offers a wide variety of lodging to suit any travel style and budget...
+        </p>
+        <ul class="card-list">
+            <li>Coral Breeze Resort – a four-star oceanfront getaway</li>
+            <li>The Mango Hut Hostel – affordable and centrally located</li>
+            <li>Island Nest Inn – family-run with local charm</li>
+            <li>Palm Shade B&B – cozy rooms and rainforest views</li>
+            <li>Blue Tide Guesthouse – walkable to Merriton Landing</li>
+            <li>Sunrise Sands Hotel – mid-range, steps from the beach</li>
+        </ul>
+    </div>
+</section>
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div></a>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
