--- a/travel.html
+++ b/travel.html
@@ -23,7 +23,7 @@
     </nav>
 </header>
 <div class="img-banner">
-    <h1 class="banner-title">Travel Taniti!</h1>
+    <h1 class="banner-title">Stay Taniti!</h1>
 </div>
 <section class="card-section">
     <div class="info-card">
