--- a/explore.html
+++ b/explore.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="navbar">
-    <div class="logo">Taniti</div>
+    <a href="index.html"><div class="logo">Taniti</div></a>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="travel.html">Travel</a>
@@ -66,7 +66,7 @@
 
 <footer class="site-footer">
     <div class="footer-left">
-        <div class="logo">Taniti</div>
+        <a href="index.html"><div class="logo">Taniti</div>
     </div>
     <div class="footer-center">
         <p>&copy; 2025 Taniti. All rights reserved.</p>
